logs/rPackages.bapred_err.log
these 10 derivations will be built:
  /nix/store/6bs4nh75f52bam334sm45ww6b28fpih0-r-affyio-1.40.0.drv
  /nix/store/araxngdsqvha9v3sgqcd6sds9gyqs112-r-preprocessCore-1.32.0.drv
  /nix/store/lxzpsk5ccj737303m1mbqkz0861f0wim-r-BiocInstaller-1.20.3.drv
  /nix/store/9r6g7mhxjx8xwhirkdfngpi1pay2x1x3-r-affy-1.48.0.drv
  /nix/store/965ddb7nlk2vgpq8rlzc883pbg5mzj92-r-Biostrings-2.38.4.drv
  /nix/store/kk6gilskmjhv8674cfsjdq6hclhqsvrc-r-gcrma-2.42.0.drv
  /nix/store/6c7cv9hmclk8pzffrafbkgx8lr915h12-r-affyPLM-1.46.0.drv
  /nix/store/jp7fkc7qlwjy3vxz8dx7g5swjqwss4r9-r-genefilter-1.52.1.drv
  /nix/store/w63nsr7b2vi3xdg1x7wkz1j6pn3lhhhi-r-sva-3.18.0.drv
  /nix/store/ngcgv5allkl9klkfwgjn6llpklglfm4a-r-bapred-1.1.drv
building '/nix/store/lxzpsk5ccj737303m1mbqkz0861f0wim-r-BiocInstaller-1.20.3.drv'...
building '/nix/store/6bs4nh75f52bam334sm45ww6b28fpih0-r-affyio-1.40.0.drv'...
building '/nix/store/jp7fkc7qlwjy3vxz8dx7g5swjqwss4r9-r-genefilter-1.52.1.drv'...
building '/nix/store/araxngdsqvha9v3sgqcd6sds9gyqs112-r-preprocessCore-1.32.0.drv'...
building '/nix/store/965ddb7nlk2vgpq8rlzc883pbg5mzj92-r-Biostrings-2.38.4.drv'...
Running phase: unpackPhase
unpacking source archive /nix/store/r05jnacs6a07kx1qgfcz1v6fc9lc9lna-BiocInstaller_1.20.3.tar.gz
source root is BiocInstaller
setting SOURCE_DATE_EPOCH to timestamp 1462997595 of file BiocInstaller/DESCRIPTION
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
* installing *source* package ‘BiocInstaller’ ...
** using staged installation
** R
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
Running phase: unpackPhase
unpacking source archive /nix/store/s5ck3n0c1rw9lhvmzvaqz5iiyizbrs9d-affyio_1.40.0.tar.gz
source root is affyio
setting SOURCE_DATE_EPOCH to timestamp 1444782745 of file affyio/src/read_pgf.c
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
* installing *source* package ‘affyio’ ...
** using staged installation
Running phase: unpackPhase
unpacking source archive /nix/store/nasj7wpna8py8ck226zkspmk2br6niha-genefilter_1.52.1.tar.gz
source root is genefilter
setting SOURCE_DATE_EPOCH to timestamp 1453944267 of file genefilter/src/ttest.f
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
Running phase: unpackPhase
unpacking source archive /nix/store/jqrfixmmp7rkj19wvwn0d7msrlnp5l7s-preprocessCore_1.32.0.tar.gz
source root is preprocessCore
setting SOURCE_DATE_EPOCH to timestamp 1444782747 of file preprocessCore/src/weightedkerneldensity.h
** building package indices
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
Running phase: unpackPhase
unpacking source archive /nix/store/krpgx3xhzwqc9a6k2aly5f59fd29zip8-Biostrings_2.38.4.tar.gz
** testing if installed package can be loaded from temporary location
* installing *source* package ‘genefilter’ ...
** using staged installation
** libs
using C compiler: ‘clang version 16.0.6’
* installing *source* package ‘preprocessCore’ ...
** using staged installation
using Fortran compiler: ‘GNU Fortran (GCC) 13.3.0’
using C++ compiler: ‘clang version 16.0.6’
source root is Biostrings
setting SOURCE_DATE_EPOCH to timestamp 1454981144 of file Biostrings/src/xscat.c
using SDK: ‘’
Running phase: patchPhase
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/c++ -std=gnu++17 -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2   -c half_range_mode.cpp -o half_range_mode.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c init.c -o init.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c nd.c -o nd.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c pAUC.c -o pAUC.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c rowPAUCs.c -o rowPAUCs.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c rowttests.c -o rowttests.o
/nix/store/93i6w80axzmddh7kl97br2axr8al13vx-gfortran-wrapper-13.3.0/bin/gfortran  -fPIC  -g -O2  -c ttest.f -o ttest.o
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
nd.c:24:10: fatal error: 'S.h' file not found
#include "S.h"
         ^~~~~
1 error generated.
make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: nd.o] Error 1
make: *** Attente des tâches non terminées....
rowttests.c:172:14: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
              error(errmsg);
                    ^~~~~~
rowttests.c:172:14: note: treat the string as an argument to avoid this
              error(errmsg);
                    ^
                    "%s", 
rowttests.c:181:14: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
              error(errmsg);
                    ^~~~~~
rowttests.c:181:14: note: treat the string as an argument to avoid this
              error(errmsg);
                    ^
                    "%s", 
2 errors generated.
make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: rowttests.o] Error 1
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
Avis dans read.dcf(conn) :
  URL 'https://bioconductor.org/BiocInstaller.dcf': statut 'SSL connect error'
Bioconductor version 3.2 (BiocInstaller 1.20.3), ?biocLite for help
Error: le chargement du package ou de l'espace de noms a échoué pour ‘BiocInstaller’ :
.onAttach a échoué dans attachNamespace() pour 'BiocInstaller', détails :
  appel : if (IS_END_OF_LIFE) {
  erreur : l'argument est de longueur nulle
Erreur : le chargement a échoué
Exécution arrêtée
ERROR: loading failed
* removing ‘/nix/store/8mj6p2laa1h15j32p95v3skcxfrl88f1-r-BiocInstaller-1.20.3/library/BiocInstaller’
error: builder for '/nix/store/lxzpsk5ccj737303m1mbqkz0861f0wim-r-BiocInstaller-1.20.3.drv' failed with exit code 1;
       last 25 log lines:
       > Running phase: updateAutotoolsGnuConfigScriptsPhase
       > Running phase: configurePhase
       > Running phase: buildPhase
       > Running phase: checkPhase
       > Running phase: installPhase
       > * installing *source* package ‘BiocInstaller’ ...
       > ** using staged installation
       > ** R
       > ** inst
       > ** byte-compile and prepare package for lazy loading
       > ** help
       > *** installing help indices
       > ** building package indices
       > ** testing if installed package can be loaded from temporary location
       > Avis dans read.dcf(conn) :
       >   URL 'https://bioconductor.org/BiocInstaller.dcf': statut 'SSL connect error'
       > Bioconductor version 3.2 (BiocInstaller 1.20.3), ?biocLite for help
       > Error: le chargement du package ou de l'espace de noms a échoué pour ‘BiocInstaller’ :
       > .onAttach a échoué dans attachNamespace() pour 'BiocInstaller', détails :
       >   appel : if (IS_END_OF_LIFE) {
       >   erreur : l'argument est de longueur nulle
       > Erreur : le chargement a échoué
       > Exécution arrêtée
       > ERROR: loading failed
       > * removing ‘/nix/store/8mj6p2laa1h15j32p95v3skcxfrl88f1-r-BiocInstaller-1.20.3/library/BiocInstaller’
       For full logs, run 'nix log /nix/store/lxzpsk5ccj737303m1mbqkz0861f0wim-r-BiocInstaller-1.20.3.drv'.
error (ignored): error: cannot unlink '"/private/tmp/nix-build-r-Biostrings-2.38.4.drv-5"': Directory not empty
error: 1 dependencies of derivation '/nix/store/9r6g7mhxjx8xwhirkdfngpi1pay2x1x3-r-affy-1.48.0.drv' failed to build
error: 1 dependencies of derivation '/nix/store/kk6gilskmjhv8674cfsjdq6hclhqsvrc-r-gcrma-2.42.0.drv' failed to build
error: 1 dependencies of derivation '/nix/store/ngcgv5allkl9klkfwgjn6llpklglfm4a-r-bapred-1.1.drv' failed to build
